# attendance

./: README.md  cdk.context.json  package.json  pnpm-lock.yaml  sst.config.ts  version_packages.py
.github/workflows/: build.yaml
scanner_code/: Cargo.toml
scanner_code/.cargo/: config
scanner_code/src/: colors.rs  macros.rs  main.rs  remote.rs
stacks/: API.ts  Config.ts  DB.ts  MyStack.ts  Sites.ts  WS.ts
