[package]
name = "scanner_code"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.9.4"
