[package]
name = "scanner_code"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
directories = "5.0.1"
firebase-rs = "2.0.9"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-cron-scheduler = "0.9.4"
